# altdata

./: .env.example  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 88ae499756e5_initial_schema.py
altdata/: __init__.py  cli.py  logging.py  settings.py
altdata/core/: __init__.py  base_source.py  http_client.py  job_runner.py  proxy.py  raw_store.py
altdata/db/: __init__.py  models.py  session.py
altdata/db/repos/: __init__.py  payload_repo.py  run_repo.py
altdata/scheduler/: __init__.py  apscheduler.py
altdata/sources/: __init__.py  example_html.py  example_rss.py
tests/: conftest.py  test_base_source.py  test_example_sources.py  test_http_client.py  test_job_runner.py  test_raw_store.py
