[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "altdata"
version = "0.1.0"
description = "Production-quality alt-data scraping framework"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "httpx>=0.27",
    "anyio>=4.0",
    "typer>=0.12",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "structlog>=24.0",
    "apscheduler>=3.10",
    "playwright>=1.44",
    "pyarrow>=16.0",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "anyio[trio]>=4.0",
]

[project.scripts]
altdata = "altdata.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["altdata"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["altdata"]
omit = ["tests/*"]
